added dropdown in orders to show paid and unpaid orders

--- a/JattanaNursury/Views/Orders/UnpaidOrders.cshtml
+++ b/JattanaNursury/Views/Orders/UnpaidOrders.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<JattanaNursury.ViewModels.OrderIndexViewModel>
+﻿@model IEnumerable<JattanaNursury.ViewModels.OrderPaidModel>
 
 <table id="ordersTable" class="table table-striped"></table>
 
