--- a/JattanaNursury/Views/Shared/_Layout.cshtml
+++ b/JattanaNursury/Views/Shared/_Layout.cshtml
@@ -29,11 +29,21 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item ">
                             <a class="nav-link text-dark" asp-controller="Orders" asp-action="Create">Add Order</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Orders" asp-action="Index">Orders</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Orders</a>
+                            <ul class="dropdown-menu">
+                                <li>
+
+                                <a class="dropdown-item" asp-controller="Orders" asp-action="PaidOrders" >Full Paid</a>
+                                </li>
+                                <li>
+                                <a class="dropdown-item" asp-controller="Orders" asp-action="UnpaidOrders">Pending Payment</a>
+
+                                </li>
+                            </ul>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -56,7 +66,8 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.22.1/dist/bootstrap-table.min.js"></script>
-    <script src="~/bootstrap-5.3.2-dist/bootstrap-5.3.2-dist/js/bootstrap.js" asp-append-version="true"></script>
+    @* <script src="~/bootstrap-5.3.2-dist/bootstrap-5.3.2-dist/js/bootstrap.js" asp-append-version="true"></script> *@
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
