--- a/JattanaNursury/Views/Orders/UnpaidOrders.cshtml
+++ b/JattanaNursury/Views/Orders/UnpaidOrders.cshtml
@@ -1,15 +1,19 @@
-﻿@model IEnumerable<JattanaNursury.ViewModels.OrderPaidModel>
+﻿@model IEnumerable<JattanaNursury.ViewModels.OrderUnpaidModel>
 
 <table id="ordersTable" class="table table-striped"></table>
 
 @section Scripts{
     <script>
-        $(document).ready(function () {
-
-        });
         var obj = @Json.Serialize(Model);
 
         console.log(obj);
+        function dateFormatter(data, row, index) {
+            const date = new Date(Date.parse(data));
+            return date.toDateString();
+        }
+        function priceFormatter(data, row, index) {
+            return '₹' + data;
+        }
         $('#ordersTable').bootstrapTable({
             columns:
                 [{
@@ -61,14 +65,6 @@
             sortOrder: 'desc'
 
         });
-
-        function dateFormatter(data, row, index) {
-            const date = new Date(Date.parse(data));
-            return date.toDateString();
-        }
-        function priceFormatter(data, row, index) {
-            return '₹' + data;
-        }
     </script>
 
 }
