--- a/JattanaNursury/Views/Orders/UnpaidOrders.cshtml
+++ b/JattanaNursury/Views/Orders/UnpaidOrders.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<JattanaNursury.ViewModels.OrderUnpaidModel>
 
-<table id="ordersTable" class="table table-striped" data-detail-view="true"></table>
+<table id="ordersTable" class="table" data-detail-view="true"></table>
 
 @section Scripts{
     <script>
@@ -47,6 +47,7 @@
                 }, {
                     field: "paidByCustomer",
                     title: "Paid",
+                    cellStyle: "redCell",
                     sortable: true,
                     formatter: "priceFormatter",
                     align: 'right'
@@ -65,6 +66,8 @@
             detailView: true,
             detailFormatter: 'productListFormatter'
         });
+
+    
         function productListFormatter(index, row) {
             var tableRows = [];
             console.log(row);
@@ -82,12 +85,13 @@
             });
             var rows = tableRows.join('');
             var html = `<div class="row p-3">
-                      <div class="col-12 d-flex justify-content-evenly">
-                        <p>${row.customerName}</p>
-                        <p>${row.customerPhone}</p>
-                        <p>${row.customerAddress}</p>
+                      <div class="col-12 d-flex justify-content-between table-border p-3">
+                        <p>Name: <strong>${row.customerName}</strong></p>
+                        <p>Phone: <strong>${row.customerPhone}</strong></p>
+                        <p>Address: <strong>${row.customerAddress}</strong></p>
+                        <p class="text-red" >Pending: <strong>₹${row.billPrice - row.paidByCustomer}</strong></p>
                       </div>
-                      <div class="col-12">
+                      <div class="col-12 mt-4 p-3 table-border">
                         <table class="table">
                           <thead>
                             <tr>
@@ -109,6 +113,16 @@
             console.log(html);
             return html;
         }
+
+        function redCell() 
+        {
+            return {
+                css: {
+                    color: 'red'
+                }
+            }
+        }
+
     </script>
 
 }
