--- a/JattanaNursury/Views/Shared/_Layout.cshtml
+++ b/JattanaNursury/Views/Shared/_Layout.cshtml
@@ -6,12 +6,12 @@
     <title>@ViewData["Title"] - JattanaNursury</title>
     <link rel="stylesheet" href="~/font-awesome-pro-5/css/all.css" />
     <link rel="stylesheet" href="~/bootstrap-5.3.2-dist/bootstrap-5.3.2-dist/css/bootstrap.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/JattanaNursury.styles.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/css/order.css"/>
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.22.1/dist/bootstrap-table.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/order.css" asp-append-version="true" />
 </head>
 <body>
     <header>
