Authorization added for roles and hide the links from unauthorized users

--- a/JattanaNursury/Views/Shared/_Layout.cshtml
+++ b/JattanaNursury/Views/Shared/_Layout.cshtml
@@ -27,25 +27,27 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
-                        </li>
-                        <li class="nav-item ">
-                            <a class="nav-link text-dark" asp-controller="Orders" asp-action="Create">Add Order</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Orders</a>
-                            <ul class="dropdown-menu">
-                                <li>
+                        @if (!User.IsInRole("Customer") && (User.Identity?.IsAuthenticated ?? false))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-link text-dark" asp-controller="Orders" asp-action="Create">Add Order</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Orders</a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                    <a class="dropdown-item" asp-controller="Orders" asp-action="PaidOrders" >Full Paid</a>
+                                    </li>
+                                    <li>
+                                    <a class="dropdown-item" asp-controller="Orders" asp-action="UnpaidOrders">Pending Payment</a>
 
-                                <a class="dropdown-item" asp-controller="Orders" asp-action="PaidOrders" >Full Paid</a>
-                                </li>
-                                <li>
-                                <a class="dropdown-item" asp-controller="Orders" asp-action="UnpaidOrders">Pending Payment</a>
-
-                                </li>
-                            </ul>
-                        </li>
+                                    </li>
+                                </ul>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
