--- a/JattanaNursury/Views/Shared/_Layout.cshtml
+++ b/JattanaNursury/Views/Shared/_Layout.cshtml
@@ -15,34 +15,30 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm bg-green border-bottom box-shadow mb-3 p-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Jattana FPO</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">Jattana FPO</a>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Products" asp-action="Index">Products</a>
                         </li>
                         @if (!User.IsInRole("Customer") && (User.Identity?.IsAuthenticated ?? false))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
+                                <a class="nav-link text-white" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
                             </li>
                             <li class="nav-item ">
-                                <a class="nav-link text-dark" asp-controller="Orders" asp-action="Create">Add Order</a>
+                                <a class="nav-link text-white" asp-controller="Orders" asp-action="Create">Add Order</a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-dark" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Orders</a>
+                                <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Orders</a>
                                 <ul class="dropdown-menu">
                                     <li>
-                                    <a class="dropdown-item" asp-controller="Orders" asp-action="PaidOrders" >Full Paid</a>
+                                        <a class="dropdown-item" asp-controller="Orders" asp-action="PaidOrders">Full Paid</a>
                                     </li>
                                     <li>
-                                    <a class="dropdown-item" asp-controller="Orders" asp-action="UnpaidOrders">Pending Payment</a>
+                                        <a class="dropdown-item" asp-controller="Orders" asp-action="UnpaidOrders">Pending Payment</a>
 
                                     </li>
                                 </ul>
