styled add product page and changed main colors on website

--- a/JattanaNursury/Views/Orders/Create.cshtml
+++ b/JattanaNursury/Views/Orders/Create.cshtml
@@ -1,5 +1,10 @@
 ﻿@model JattanaNursury.ViewModels.OrderViewModel;
 
+@section Styles
+{
+    <link href="~/css/order.css" rel="stylesheet" asp-append-version="true"/>
+}
+
 <div>
     <div class="row">
         <h2 class="text-center" id="show-error-below">Sale</h2>
