--- a/JattanaNursury/Views/Orders/UnpaidOrders.cshtml
+++ b/JattanaNursury/Views/Orders/UnpaidOrders.cshtml
@@ -1,5 +1,8 @@
 ﻿@model IEnumerable<JattanaNursury.ViewModels.OrderUnpaidModel>
-
+@section Styles
+    {
+    <link href="~/css/order.css" rel="stylesheet" asp-append-version="true" />
+}
 <table id="ordersTable" class="table" data-detail-view="true"></table>
 
 @section Scripts{
