--- a/JattanaNursury/wwwroot/css/general.css
+++ b/JattanaNursury/wwwroot/css/general.css
@@ -26,3 +26,22 @@ p {
     margin: 0;
     padding: 0;
 }
+
+.primary-btn {
+    background-color: var(--p-color);
+    font-weight: 500;
+    color: white;
+}
+
+.secondary-btn {
+    background-color: white;
+    font-weight: 500;
+    color: #104210;
+    border: 2px solid #104210;
+}
+
+.red-btn {
+    background-color: var(--b-color);
+    font-weight: 500;
+    color: white;
+}
