renamed css file for products

--- a/JattanaNursury/Views/Products/Create.cshtml
+++ b/JattanaNursury/Views/Products/Create.cshtml
@@ -6,7 +6,7 @@
 
 @section Styles
     {
-    <link href="~/css/createProduct.css" rel="stylesheet" asp-append-version="true" />
+    <link href="~/css/products.css" rel="stylesheet" asp-append-version="true" />
 }
 <div class="container-fluid add-product-container mt-5">
     <div class="row">
