--- a/JattanaNursury/wwwroot/css/products.css
+++ b/JattanaNursury/wwwroot/css/products.css
@@ -27,3 +27,6 @@
 .btn-row {
     border-top: 1px solid;
 }
+.add-product-container {
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
